add createChannelReportDoctorWise and supported methods Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -85,6 +85,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Patient Count()" action="/channel/channel_report_staff_wise_patient_count"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="BTT" action="/channel/channel_doctor_view_today_all"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="BTT By Percentage" action="/channel/channel_doctor_view_today_all_1" actionListener="#{channelReportController.clearWithDefultValue}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Specility Wise Channel Appoinment count" action="/channel/channel_report_speciality_wise" />
+
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
