add serial no to consultant Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -24,6 +24,12 @@
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
                                 <h:panelGrid id="gpSelectText" >
+                                    
+                                    <h:selectOneListbox size="1" value="#{consultantController.speciality}" >
+                                        <f:selectItem itemLabel="Please select a speciality"/>
+                                        <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                    <f:ajax execute="@this" render="lstSelect" event="change" />
+                                    </h:selectOneListbox>
                                     <p:inputText autocomplete="off" value="#{consultantController.selectText}" >
                                         <f:ajax execute="@this" render="lstSelect" event="keyup" />
                                     </p:inputText>
@@ -32,6 +38,7 @@
                                         <f:selectItems  value="#{consultantController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" />                                        
                                     </h:selectOneListbox>
+                                    
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
                                     <p:commandButton id="btnAdd" value="Add"  
@@ -61,6 +68,8 @@
                                     <p:inputText autocomplete="off" value="#{consultantController.current.person.name}"  />
                                     <h:outputText  value="Code" />
                                     <p:inputText autocomplete="off" value="#{consultantController.current.code}"  />
+                                    <h:outputText  value="*Consultant Serial No" />
+                                    <p:inputText autocomplete="off" value="#{consultantController.current.codeInterger}"  />
                                     <h:outputText  value="Phone" />
                                     <p:inputMask mask="999-999999" value="#{consultantController.current.person.phone}"  />
                                     <h:outputText  value="Fax" />
