--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -80,6 +80,7 @@
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Leave Report()" action="/channel/channel_report_doctor_leave"/>  
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Channel Appoinment Total And Count(12)" action="/channel/channel_report_consultant_month_count"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Channel Appoinment Total And Count(12)(New)" action="/channel/channel_report_consultant_month_count_1"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Specility Wise Channel Appoinment Total And Count(10 &amp; 11)" action="/channel/channel_report_specility_month_count"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel &amp; Scan Count(41)" action="/channel/channel_report_scan_channel_count"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Patient Count()" action="/channel/channel_report_staff_wise_patient_count"/>
