--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -51,6 +51,7 @@
                                 <p:panel header="2) Book Keeping Summary(Witout Professional)" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Day End" action="report_cash_category_without_pro_day"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Month End" action="report_cash_category_without_pro_month"/>                             
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="Category Vise Income" action="report_cash_catogory_summery"/>                             
                                 </p:panel>
                                 <p:panel header="5) Summary By Service Inward" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid >                               
