--- a/src/main/webapp/reportInstitution/report_cash_catogory_summery.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_catogory_summery.xhtml
@@ -24,10 +24,10 @@
                 <p:panel>
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From Date"/>
-                        <p:calendar value="#{bookKeepingSummery.fromDate}" navigator="true" pattern="dd MMM yyyy"  >
+                        <p:calendar value="#{bookKeepingSummery.fromDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" styleClass="dateTimePicker">
                         </p:calendar>
                         <h:outputLabel value="To Date"/>
-                        <p:calendar value="#{bookKeepingSummery.toDate}" navigator="true" pattern="dd MMM yyyy" >
+                        <p:calendar value="#{bookKeepingSummery.toDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" styleClass="dateTimePicker">
                         </p:calendar>
                     </h:panelGrid>
                     <h:panelGrid columns="2" id="pg1" >
@@ -39,27 +39,34 @@
                                         var="pta" itemLabel="#{pta.name}" itemValue="#{pta}" />
                         <h:outputLabel value="By Date"/> 
                         <p:selectBooleanCheckbox value="#{bookKeepingSummery.byDate}" />
+                        <h:outputLabel value="With Out Pro"/> 
+                        <p:selectBooleanCheckbox value="#{bookKeepingSummery.withOutPro}" />
                     </h:panelGrid> 
-                    <h:panelGrid columns="2">
-                        <p:commandButton action="#{bookKeepingSummery.createCashCategorySummery()}" value="Count" ajax="false" />
+                    <h:panelGrid columns="3">
+                        <p:commandButton action="#{bookKeepingSummery.createCashCategorySummery()}" value="Process" ajax="false" />
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                             <p:printer target="reportPrint"  />
                         </p:commandButton> 
+                        <p:commandButton value="Excel" ajax="false" style="float: right;">
+                            <pe:exporter type="xlsx" target="tbl1" fileName="Category_Summery"  />
+                        </p:commandButton>
                     </h:panelGrid>
                 </p:panel>
-                <p:panel id="reportPrint" >
-                    <p:dataTable value="#{bookKeepingSummery.bookKeepingSummeryRowsOpd}" var="s">
+                <p:panel id="reportPrint" styleClass="noBorder summeryBorder">
+                    <p:dataTable id="tbl1" value="#{bookKeepingSummery.bookKeepingSummeryRowsOpd}" var="s">
                         <p:column>
                             <f:facet name="header">
                                 <h:outputText value="Doctor Name"/>
                             </f:facet>
                             <h:outputText value="#{s.categoryName}"/>
                         </p:column>
-                        <p:columns value="#{bookKeepingSummery.columnModels}" var="column" >
+                        <p:columns value="#{bookKeepingSummery.columnModels}" var="column" styleClass="numberCol">
                             <f:facet name="header">
                                 <h:outputText value="#{column.header}" />
                             </f:facet>
-                            <h:outputText value="#{s.incomes[column.property]}" />
+                            <h:outputText value="#{s.incomes[column.property]}" >
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputText>
                         </p:columns>
 
 
