Bht Retrn & Report changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/reportIncome/report_income_with_credit_by_department_billed.xhtml
+++ b/src/main/webapp/reportIncome/report_income_with_credit_by_department_billed.xhtml
@@ -106,6 +106,14 @@
                         </f:facet>
                         <h:outputLabel value="#{b.patient.person.name}" ></h:outputLabel>
                     </p:column>
+                    
+                    <p:column headerText="Cons. Name" sortBy="#{b.staff.person.name}" rendered="#{commonReport1.radio eq '3'}" >
+                        <f:facet name="header">
+                            <h:outputLabel value="Cons. Name"/>
+                        </f:facet>
+                        <h:outputLabel value="#{b.staff.person.name}" ></h:outputLabel>
+                    </p:column>
+                    
                     <p:column headerText="Department" sortBy="#{b.toDepartment.name}">
                         <f:facet name="header">
                             <h:outputLabel value="Department"/>
