--- a/src/main/webapp/common/form_format.xhtml
+++ b/src/main/webapp/common/form_format.xhtml
@@ -87,22 +87,22 @@
 
 
                                 <h:outputText value="Left" />
-                                <p:inputText autocomplete="off" id="txtLeft" value="#{commonReportItemController.current.cssLeft}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtLeft" value="#{commonReportItemController.current.riLeft}"/>
 
                                 <h:outputText value="Top"/>
-                                <p:inputText autocomplete="off" id="txtTop" value="#{commonReportItemController.current.cssTop}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtTop" value="#{commonReportItemController.current.riTop}"/>
 
 
 
                                 <h:outputText value="Font Size"/>
-                                <p:inputText autocomplete="off" id="txtFontSize" value="#{commonReportItemController.current.cssFontSize}" />
+                                <p:inputText autocomplete="off" maxlength="3" id="txtFontSize" value="#{commonReportItemController.current.riFontSize}" />
 
 
                                 <h:outputText value="Width"/>
-                                <p:inputText autocomplete="off" id="txtWidth" value="#{commonReportItemController.current.cssWidth}" />
+                                <p:inputText autocomplete="off" maxlength="3" id="txtWidth" value="#{commonReportItemController.current.riWidth}" />
 
                                 <h:outputText value="Height"/>
-                                <p:inputText autocomplete="off" id="txtHeight" value="#{commonReportItemController.current.cssHeight}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtHeight" value="#{commonReportItemController.current.riHeight}"/>
 
 
 
