Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/resources/bill/insRecieve.xhtml
+++ b/src/main/webapp/resources/bill/insRecieve.xhtml
@@ -222,7 +222,7 @@
                                  position: absolute;
                                  left: 80%;
                                  top: 25%;" >
-                                <h:dataTable value="#{cc.attrs.billController.billItems}" var="bip1" >
+                                <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1" >
                                     <h:column>
                                         <h:outputLabel value="#{bip1.netValue}"  style="font-size: 10px!important; float: right;" >
                                             <f:convertNumber pattern="#,##0.00" />
