--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -135,6 +135,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users" action="/channel/report_cashier_vise_count" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users(By Appoinment Date)" action="/channel/report_cashier_vise_count_1" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Monthly All Vat report" action="/channel/channel_report_monthly_all_vat" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Daily channel and scan count bar chart" action="/channel/channel_report_dailyChannelAndScanCount_barChart" />
+
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
@@ -146,7 +148,7 @@
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
-                            
+
 
                         </h:panelGrid>
                     </p:panel>
