add dashboard to system Signed-off-by: arunawijesinghe <acswijesinghe91@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -135,7 +135,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users" action="/channel/report_cashier_vise_count" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users(By Appoinment Date)" action="/channel/report_cashier_vise_count_1" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Monthly All Vat report" action="/channel/channel_report_monthly_all_vat" />
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Daily channel and scan count bar chart" action="/channel/channel_report_dailyChannelAndScanCount_barChart" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Dashboard" action="/channel/channel_report_dailyChannelAndScanCount_barChart" />
 
                                     </h:panelGrid>
                                 </p:panel>
