--- a/src/main/webapp/channel/channel_report_dailyChannelAndScanCount_barChart.xhtml
+++ b/src/main/webapp/channel/channel_report_dailyChannelAndScanCount_barChart.xhtml
@@ -9,175 +9,203 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
+                <!--monthly channel and scan count-->
                 <script type="text/javascript">
 
-                    google.charts.load('current', {packages: ['corechart', 'bar']});
-                    google.charts.setOnLoadCallback(drawBasic);
+                    google.charts.load('current', {'packages': ['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
 
-                    function drawBasic() {
+                    function drawChart() {
+                        var rawdata =#{googleChartController.drawChannelAndScanCountChart()}
+                        var data = google.visualization.arrayToDataTable(rawdata);
 
-                        var rowdata =#{googleChartController.drawChart()}
-                        var data = google.visualization.arrayToDataTable(rowdata);
-//                        var data = google.visualization.arrayToDataTable([
-//                            ['City', '2010 Population', ],
-//                            ['New York City, NY', 8175000],
-//                            ['Los Angeles, CA', 3792000],
-//                            ['Chicago, IL', 2695000],
-//                            ['Houston, TX', 2099000],
-//                            ['Philadelphia, PA', 1526000]
-//                        ]);
-
-//                        var options = {
-//                            title: 'Daily Channel Count',
-//                            chartArea: {width: '50%'},
-//                            hAxis: {
-//                                title: 'Total count',
-//                                minValue: 0
-//                            },
-//                            vAxis: {
-//                                title: 'Date'
-//                            }
-//                        };
                         var options = {
-                            title: 'Daily Channel count',
-                            hAxis: {
-                                title: 'Date',
-                                format: 'h:mm a',
-                                viewWindow: {
-//                                    min: [7, 30, 0],
-//                                    max: [17, 30, 0]
-                                }
-                            },
-                            vAxis: {
-                                title: 'Channel Count'
-                            }
+                            title: 'Monthly Channel Count',
+//                            curveType: 'function',
 
-                        };
+                            legend: {position: 'bottom'},
+                            lineWidth: 3,
+                            colors: ['Green', 'Red']
 
-//                        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
-                        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+                        }
+                        ;
+
+                        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+
                         chart.draw(data, options);
                     }
                 </script>
+                <!--daily income by doctor fee doctor vat-->
                 <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
                     function drawChart() {
                         var rowdata =#{googleChartController.drawPiechartDailyIncome()}
-//                        var data = google.visualization.arrayToDataTable([
-//                            ['Task', 'Hours per Day'],
-//                            ['Work', 21],
-//                            ['Eat', 2],
-//                            ['Commute', 2],
-//                            ['Watch TV', 2],
-//                            ['Sleep', 7]
-//                        ]);
                         var data = google.visualization.arrayToDataTable(rowdata);
                         var options = {
-                            title: 'My Daily Activities',
+                            title: 'Daily Channel Income ',
                             is3D: true,
                         };
-
                         var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
                         chart.draw(data, options);
                     }
                 </script>
-                 <script type="text/javascript">
+                <!--channel method chart-->
+                <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
                     function drawChart() {
                         var rowdata =#{googleChartController.drawChannelingMethodsChart()}
-                        ////                        var data = google.visualization.arrayToDataTable([
-//                            ['Task', 'Hours per Day'],
-//                            ['Work', 21],
-//                            ['Eat', 2],
-//                            ['Commute', 2],
-//                            ['Watch TV', 2],
-//                            ['Sleep', 7]
-//                        ]);
                         var data = google.visualization.arrayToDataTable(rowdata);
                         var options = {
-                            title: 'Channeling Methods',
+                            title: 'Count Channeling Methods',
                             is3D: true,
                         };
-
                         var chart = new google.visualization.PieChart(document.getElementById('piechart1'));
-
                         chart.draw(data, options);
                     }
                 </script>
-                       <script type="text/javascript">
+                <!--daily pharmacy income-->
+                <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
                     function drawChart() {
                         var rowdata =#{googleChartController.drawPharmacyIncomeChart()}
-                        ////                        var data = google.visualization.arrayToDataTable([
-//                            ['Task', 'Hours per Day'],
-//                            ['Work', 21],
-//                            ['Eat', 2],
-//                            ['Commute', 2],
-//                            ['Watch TV', 2],
-//                            ['Sleep', 7]
-//                        ]);
                         var data = google.visualization.arrayToDataTable(rowdata);
                         var options = {
                             title: 'Pharmacy Income',
                             is3D: true,
                         };
-
                         var chart = new google.visualization.PieChart(document.getElementById('piechart2'));
-
                         chart.draw(data, options);
                     }
                 </script>
-                       <script type="text/javascript">
+                <!--daily opd income by category-->
+                <script type="text/javascript">
                     google.charts.load('current', {'packages': ['corechart']});
                     google.charts.setOnLoadCallback(drawChart);
                     function drawChart() {
-                        var rowdata =#{googleChartController.drawOpdIncomeChart()}       ////                        var data = google.visualization.arrayToDataTable([
-//                            ['Task', 'Hours per Day'],
-//                            ['Work', 21],
-//                            ['Eat', 2],
-//                            ['Commute', 2],
-//                            ['Watch TV', 2],
-//                            ['Sleep', 7]
-//                        ]);
+                        var rowdata =#{googleChartController.drawOpdIncomeChart()}
                         var data = google.visualization.arrayToDataTable(rowdata);
                         var options = {
                             title: 'OPD Income By Category',
                             is3D: true,
                         };
-
                         var chart = new google.visualization.PieChart(document.getElementById('piechart3'));
-
                         chart.draw(data, options);
                     }
                 </script>
+                <!--daily inward cash -->
+                <script type="text/javascript">
+                    google.charts.load('current', {'packages': ['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+                    function drawChart() {
+                        var rowdata =#{googleChartController.drawInwardCash()}
+                        var data = google.visualization.arrayToDataTable(rowdata);
+                        var options = {
+                            title: 'Inward Cash Income By Category',
+                            is3D: true,
+                        };
+                        var chart = new google.visualization.PieChart(document.getElementById('piechart5'));
+                        chart.draw(data, options);
+                    }
+                </script>
+                <!--daily inward credit-->
+                <script type="text/javascript">
+                    google.charts.load('current', {'packages': ['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+                    function drawChart() {
+                        var rowdata =#{googleChartController.drawInwardCredit()}
+                        var data = google.visualization.arrayToDataTable(rowdata);
+                        var options = {
+                            title: 'Inward Credit Income By Category',
+                            is3D: true,
+                        };
+                        var chart = new google.visualization.PieChart(document.getElementById('piechart6'));
+                        chart.draw(data, options);
+                    }
+                </script>
+                <!--collection center investigations count-->
+                <script type="text/javascript">
+                    google.charts.load('current', {'packages': ['bar']});
+                    google.charts.setOnLoadCallback(drawChart);
+                    function drawChart() {
+                        var rowdata =#{googleChartController.drawCollectionCenterInvestigationCountChart()}
+                        var data = google.visualization.arrayToDataTable(rowdat a);
+                        var options = {
+                            chart: {
+                                title: 'Counts Of Collection Centers',
+                            }}
+                        ;
+                        var chart = new google.charts.Bar(document.getElementById('piechart4'));
+                        chart.draw(data, options);
+                    }
+                </script>
+                <!--total daily income by section-->
+                <script type="text/javascript">
+                    google.charts.load('current', {'packages': ['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+                    function drawChart() {
+                        var rowdata =#{googleChartController.drawTotalIncomeBySectionChart()}
+                        var data = google.visualization.arrayToDataTable(rowdata);
+                        var options = {
+                            title: 'Income By Section',
+                            is3D: true,
+                        };
+                        var chart = new google.visualization.PieChart(document.getElementById('piechart7'));
+                        chart.draw(data, options);
+                    }
+                </script>
+                <h1 style="color: #107710">RUHUNU HOSPITAL DASHBOARD</h1>
+                <h3>Welcome <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}"/></h3>
                 <h:panelGrid columns="3">
-                    <p:panel header="Daily Channel Count">
-                        <div id="chart_div" style="width: 500px; height: 500px;"></div>
+                    <p:panel >
+                        <div id="chart_div" style="width: 1000px; height: 400px;"></div>
                     </p:panel>
-                    <p:panel header="Daily Channel Count">
-                        <div id="piechart" style="width: 500px; height: 500px;">
-                            pie chart
+                  <p:panel >
+                        <div id="piechart" style="width:400px; height: 400px;">
+
                         </div>
                     </p:panel>
-                    <p:panel header="Channeling Methods">
-                        <div id="piechart1" style="width: 500px; height: 500px;">
-                            pie chart
+                    <p:panel >
+                        <div id="piechart1" style="width: 400px; height: 400px;">
+
                         </div>
                     </p:panel>
-                    <p:panel header="Pharmacy Income">
-                        <div id="piechart2" style="width: 500px; height: 500px;">
-                            pie chart 
+                </h:panelGrid>
+                <h:panelGrid columns="3">
+                    
+                    <p:panel >
+                        <div id="piechart2" style="width: 400px; height: 300px;">
+
                         </div>
                     </p:panel>
-                    <p:panel header="Pharmacy Income">
-                        <div id="piechart3" style="width: 500px; height: 500px;">
-                            pie chart 
+                    <p:panel >
+                        <div id="piechart3" style="width: 400px; height: 300px;">
+
                         </div>
                     </p:panel>
+                    <p:panel >
+                        <div id="piechart4" style="width: 400px; height: 300px;">
+
+                        </div>
+                    </p:panel>
+                    <p:panel >
+                        <div id="piechart5" style="width: 400px; height: 300px;">
+
+                        </div>
+                    </p:panel>
+                    <p:panel >
+                        <div id="piechart6" style="width: 400px; height: 300px;">
+
+                        </div>
+                    </p:panel>
+                    <p:panel >
+                        <div id="piechart7" style="width: 400px; height: 300px;">
+
+                        </div>
+                    </p:panel>
+
                 </h:panelGrid>
 
 
