--- a/src/main/webapp/channel/channel_report_area_with_count.xhtml
+++ b/src/main/webapp/channel/channel_report_area_with_count.xhtml
@@ -28,16 +28,21 @@
                         <p:selectBooleanCheckbox value="#{channelReportController.sessoinDate}" />
 
                         <h:outputLabel value="Summery"/>
-                        <p:selectBooleanCheckbox value="#{channelReportController.summery}" />
+                        <p:selectBooleanCheckbox value="#{channelReportController.summery}" >
+                            <f:ajax event="change" execute="@this" render="p1" />
+                        </p:selectBooleanCheckbox>
                     </h:panelGrid>
-                    <h:panelGrid columns="3"> 
+                    <h:panelGrid columns="3" id="p1"> 
                         <p:commandButton ajax="false" id="btnRefresh2" value="Process" action="#{channelReportController.createAreaWithCountTable()}">
                         </p:commandButton>
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
-                            <pe:exporter type="xlsx" target="tbl tbl2" fileName="hr_bill_list"  />
+                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" rendered="#{!channelReportController.summery}" >
+                            <pe:exporter type="xlsx" target="tbl" fileName="hr_bill_list"  subTable="true" />
+                        </p:commandButton>
+                        <p:commandButton ajax="false" value="Excel(Summery)" styleClass="noPrintButton" style="float: right;" rendered="#{channelReportController.summery}" >
+                            <pe:exporter type="xlsx" target="tbl2" fileName="hr_bill_list" />
                         </p:commandButton>
                     </h:panelGrid>
 
