--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -131,6 +131,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Agent Booking Detail List" action="/channel/channel_report_agent_channels" actionListener="#{channelReportController.clearAll}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Today All My Booking Summery" action="/channel/channel_report_cashier_summery_date"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Today All My Booking Summery(Created Date)" action="/channel/channel_report_cashier_summery_date_created"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Today All Cashier Summery(Created Date)" action="/channel/channel_report_cashier_summery_date_created_summery"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Bill Detail By Payment Methord" action="/channel/channel_report_by_bill_class_by_user_by_payment_methord" actionListener="#{channelReportController.clearAll}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users" action="/channel/report_cashier_vise_count" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users(By Appoinment Date)" action="/channel/report_cashier_vise_count_1" />
